# demo-actuarial-ml

./: .gitignore  .pre-commit-config.yaml  CUSTOMIZING.md  README.md  actuarial_pricing_demo.ipynb  config.py  create-table.sql  helpers.py  load_actuarial_data.py  pyproject.toml  setup.sql  train.py
notebooks/: actuarial_pricing_demo.ipynb  compute_pool_sizing_guide.ipynb  data_dictionary_guide.ipynb  distributed_ml_training.ipynb
src/: config.py  helpers.py  load_actuarial_data.py  train.py  train_gbm_distributed.py  train_glm.py
